Upgrade to scalajs-scripts v1.2.0

--- a/src/main/g8/server/src/main/twirl/$package$/main.scala.html
+++ b/src/main/g8/server/src/main/twirl/$package$/main.scala.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     @content
-    @findScript("client-opt/main.js", "client-fastopt/main.js")
+    @scalajs.html.scripts("client", name => s"/assets/$name", name => getClass.getResource(s"/public/$name") != null)
   </body>
 </html>
