1. fix managed resource not found issue; 2. add versioned resource finder;

--- a/src/main/g8/server/src/main/twirl/$package$/main.scala.html
+++ b/src/main/g8/server/src/main/twirl/$package$/main.scala.html
@@ -8,6 +8,10 @@
   </head>
   <body>
     @content
-    @scalajs.html.scripts("client", name => s"/assets/$name", name => getClass.getResource(s"/public/$name") != null)
+    @scalajs.html.scripts("client",
+      name => {
+        val versionedJs = VersionedResourceFinder.findAssetPath("public", s"public/$name")
+        s"/assets/$versionedJs"
+    }, name => getClass.getResource(s"/public/$name") != null)
   </body>
 </html>
